<resources>
    <string name="app_name">Tachat</string>
    <string name="welcome">Please Enter Your Email And Password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="useremail1">tomer.melamed03@gmail.com</string>
    <string name="useremail2">tomer@gmail.com</string>
    <string name="userpassword1">123456</string>
    <string name="userpassword2">1234567</string>
    <string name="useremail3">roee@gmail.com</string>
    <string name="userpassword3">12345678</string>
    <string name="useremail4">aviv@gmail.com</string>
    <string name="userpassword4">123456789</string>
    <string name="tryagain">Wrong Email Or Password, Please Try Again</string>
    <string name="writetext">write text here</string>
    <string name="sendbutton">Send</string>
    <string name="messages">first line\nfdgfgfdg\nfgfdgfdgfdgfdgghgfhgfhgfhgfhgfhgfgfh\nfdgfgfdg\nfgfdgfdgfdgfdgghgfhgfhgfhgfhgfhgfgfh\nfdgfgfdg\nfgfdgfdgfdgfdgghgfhgfhgfhgfhgfhgfgfh\nfdgfgfdg\nfgfdgfdgfdgfdgghgfhgfhgfhgfhgfhgfgfh\nfdgfgfdg\nfgfdgfdgfdgfdgghgfhgfhgfhgfhgfhgfgfh\nfdgfgfdg\nfgfdgfdgfdgfdgghgfhgfhgfhgfhgfhgfgfh\nfdgfgfdg\nfgfdgfdgfdgfdgghgfhgfhgfhgfhgfhgfgfh\nfdgfgfdg\nfgfdgfdgfdgfdgghgfhgfhgfhgfhgfhgfgfh\nfdgfgfdg\nfgfdgfdgfdgfdgghgfhgfhgfhgfhgfhgfgfh\nfdgfgfdg\nfgfdgfdgfdgfdgghgfhgfhgfhgfhgfhgfgfh\nfdgfgfdg\nfgfdgfdgfdgfdgghgfhgfhgfhgfhgfhgfgfh\nfdgfgfdg\nfgfdgfdgfdgfdgghgfhgfhgfhgfhgfhgfgfh\nfdgfgfdg\nfgfdgfdgfdgfdgghgfhgfhgfhgfhgfhgfgfh\nfdgfgfdg\nfgfdgfdgfdgfdgghgfhgfhgfhgfhgfhgfgfh\nfdgfgfdg\nfgfdgfdgfdgfdgghgfhgfhgfhgfhgfhgfgfh\nfdgfgfdg\nfgfdgfdgfdgfdgghgfhgfhgfhgfhgfhgfgfh\nfdgfgfdg\nfgfdgfdgfdgfdgghgfhgfhgfhgfhgfhgfgfh\nfdgfgfdg\nfgfdgfdgfdgfdgghgfhgfhgfhgfhgfhgfgfh\nfdgfgfdg\nfgfdgfdgfdgfdgghgfhgfhgfhgfhgfhgfgfh\nfdgfgfdg\nfgfdgfdgfdgfdgghgfhgfhgfhgfhgfhgfgfh\nfdgfgfdg\nfgfdgfdgfdgfdgghgfhgfhgfhgfhgfhgfgfh\nfdgfgfdg\nfgfdgfdgfdgfdgghgfhgfhgfhgfhgfhgfgfh\nfdgfgfdg</string>
    <string name="nothing"></string>
</resources>